--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.1"
+    "react-redux": "^8.0.1",
+    "uikit": "^3.16.24"
   },
   "devDependencies": {
     "@testing-library/dom": "^9.2.0",
