--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "@reduxjs/toolkit": "^1.8.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
